Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116505

HoverHandler is broken when using a stylus

XMLWordPrintable

    • Linux/X11, Windows
    • 5a762ba09 (dev), 688bd00cc (6.7), 56c0a6f66 (6.6), a4346dda0 (tqtc/lts-6.5)

      The following example doesn't work as intended. The HoverHandler always reports hovered=true when using a stylus even though the pointer is hovering outside the rectangle. The hovered property remains true until the stylus leaves proximity.
      When using a mouse, things work as expected.

      import QtQuick
      import QtQuick.Window
      
      Window {
          width: 640
          height: 480
          visible: true
          title: qsTr("Hello World")
      
          Rectangle {
              color: hoverHandler.hovered ? "red" : "blue"
              width: 300; height: 300
              anchors.centerIn: parent
      
              HoverHandler { id: hoverHandler }
          }
      }
      

        1. Qtbug116505.zip
          4 kB
          Irfan Omair
        For Gerrit Dashboard: QTBUG-116505
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            daljit97 Daljit Singh
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: